--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles-index.css">
+    <title>HOME PAGE</title>
 </head>
-<body>
+
+<body style="background-color: coral;">
     <h1>Odin Recipes</h1>
-    <a href="recipes/pumpkin-pie.html">Pumpernickel pikinium</a>
+    <div class="flex-container one">
+        <div class="item">
+            <a href="recipes/pumpkin-pie.html" rel="noopener noreferrer"><button class="button">Pumpernickel pikinium</button></a>
+        </div>
+
+        <div class="item">
+            <a href="recipes/squashington-DPieC.html" rel="noopener noreferrer"><button class="button">Squashington DPieC</button></a>
+        </div>
+    </div>
 </body>
+
 </html>
