--- a/recipes/pumpkin-pie.html
+++ b/recipes/pumpkin-pie.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Pumpernickel</title>
 </head>
 <body>
-    <h1>Pumpernickel pikinium</h1>
-    <a href="../index.html">Home</a>
-    <img src="pie.jpeg" alt="Pumpernickel pikinium">
+    <div class="pumpkin">Pumpernickel pikinium</div>
+    <a href="../index.html" rel="noopener noreferrer">Home</a>
+    <div></div>
+    <img src="../pie.jpeg" alt="Pumpernickel pikinium">
     <h3>Pumpernickel pikinium</h3>
     <p>This is the guy Pumpernickel pikinium in his natural environment</p>
     <h2>Ingredients</h2>
@@ -18,5 +20,9 @@
         <li>death essance</li>
         <li>Evan essance</li>
     </ul>
+
+    <div id="USA">U. S. A. and then all the other lyrics</div>
+    <span id="USA">Come on baby, America</span>
+    <span id="USA">U U U S A</span>
 </body>
 </html>
