--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body style="background-color: coral;">
     <h1>Odin Recipes</h1>
-    <div class="flex-container one">
+    <div class="flex-container vert one">
         <div class="item">
             <a href="recipes/pumpkin-pie.html" rel="noopener noreferrer"><button class="button">Pumpernickel pikinium</button></a>
         </div>
