--- a/recipes/squashington-DPieC.html
+++ b/recipes/squashington-DPieC.html
@@ -7,19 +7,46 @@
     <title>Squash</title>
 </head>
 
-<body>
+<body style="background-color: coral;">
     <div class="flex-container one">
-        <div class="squash item">Squashington DPieC</div>
+        <div class="squash item large">Squashington DPieC</div>
         <div class="item" style="text-align: center;">
-            <button class="button"><a href="../index.html" rel="noopener noreferrer">Home</a></button>
+            <a href="../index.html" rel="noopener noreferrer"><button class="button">Home</button></a>
         </div>
     </div>
     
     <div class="flex-container two">
-        <div class="item">
+        <div class="item small">
             <img src="../Squash.png" alt="Squashington DPieC" width="600px" height="auto">
         </div>
-        <div class="squash item">HAHAHAHAHA</div>
+        <div class="squash item">I'll say upfront that this pie is a project. 
+            When I was making dozens of these at a time, the workload was a bit 
+            different than when making just one for your family. To assemble this pie,
+             you'll need to roast butternut squash, caramelize onions, make and blind-bake pie dough,
+              assemble the filling, and bake the pie.</div>
+    </div>
+
+    <div class="flex-container one">
+        <div class="item small">
+            <ul style="font-size: 2rem;">
+                <li>prepared pie crust</li>
+                <li>Squashington</li>
+                <li>feat cheese</li>
+                <li>union</li>
+                <li>KOSHER salt</li>
+                <li>baltsamlic vine juice</li>
+                <li>eggu weggu</li>
+                <li>milk</li>
+                <li>cream</li>
+                <li>sunflower oil</li>
+                <li>lime juice</li>
+                <li>crude oil</li>
+                <li>time</li>
+            </ul>
+        </div>
+        <div class="item">
+            <img src="../china.jpeg" alt="china" style="object-fit: cover; width: 100%; height: 100%;">
+        </div>
     </div>
     
 </body>
