--- a/recipes/pumpkin-pie.html
+++ b/recipes/pumpkin-pie.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="styles.css">
     <title>Pumpernickel</title>
 </head>
-<body>
+
+<body style="background-image: url(../pie.jpeg);">
     <div class="pumpkin">Pumpernickel pikinium</div>
     <a href="../index.html" rel="noopener noreferrer">Home</a>
     <div></div>
@@ -25,4 +26,5 @@
     <span id="USA">Come on baby, America</span>
     <span id="USA">U U U S A</span>
 </body>
+
 </html>
