added new about me page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <div class="item">
             <a href="recipes/squashington-DPieC.html" rel="noopener noreferrer"><button class="button">Squashington DPieC</button></a>
         </div>
+
+        <div class="item">
+            <a href="recipes/about-me.html" rel="noopener noreferrer"><button class="button">About Me</button></a>
+        </div>
     </div>
 </body>
 
