finished about me page

--- a/recipes/about-me.html
+++ b/recipes/about-me.html
@@ -50,7 +50,11 @@
                     flavorful it is! It's sweet, it's savory, and salty and should be your next 
                     baking project!
                 </div>
-                <div class="item"><button class="button two linktext">Sign up</button></div>
+                <div class="item">
+                    <a href="https://moshionline.net/adopt/">
+                        <button class="button two linktext">Sign up</button>
+                    </a>
+                </div>
             
             </div>
 
@@ -60,18 +64,61 @@
 
         </div>
 
+        <div class="container main vert" style="background-color: whitesmoke;">
+
+            <div class="item blacktext" style="align-content: center; text-align: center;">Some tadpole information</div>
+
+            <div class="item container" style="justify-content: center; gap:40px; flex-grow: 3;">
+                <div class="container vert">
+                    <img src="../spawn.jpg" alt="spawn" class="imgbox">
+                    <div class="item infotext">Spawn</div>
+                </div>
+                <div class="container vert">
+                    <img src="../tadpole_small.jpeg" alt="tadpole" class="imgbox">
+                    <div class="item infotext">Tadpole</div>
+                </div>
+                <div class="container vert">
+                    <img src="../tadfrog.jpg" alt="almost frog" class="imgbox">
+                    <div class="item infotext">Tadfrog</div>
+                </div>
+                <div class="container vert">
+                    <img src="../frog.jpeg" alt="frog" class="imgbox">
+                    <div class="item infotext">Frog</div>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="container main vert" style="background-color: lightgrey; padding-left: 499px; padding-right: 499px;">
+            <div class="item quotetext" style="flex-grow: 2; align-content: end;">
+                You are Britney Spears and Britney Spears has no place in this realm. Begone demon; back to 
+                from whence you came.
+            </div>
+
+            <div class="item quotertext">-Joshku, Skorpian of Bread</div>
+        </div>
+
         <div class="container main" style="background-color: whitesmoke;">
-            <div class="item"></div>
+            <div class="item container cta">
+                
+                <div class="item container vert" style="padding-left: 299px;">
+                    <div class="item header" style="align-content: end;">This is a call to action!</div>
+                    <div class="item subheader">Go click the sign up button to the right. Please.</div>
+                </div>
+
+                <div class="item" style="align-content: center; text-align: center;">
+                    <a href="https://moshionline.net/adopt/">
+                        <button class="button two linktext" style="border: 2px solid white;">Sign up</button>
+                    </a>
+                </div>
+            </div>
         </div>
 
-        <div class="container main" style="background-color: lightgrey;">
-            <div class="item"></div>
-        </div>
+    </div>
 
-        <div class="container main" style="background-color: whitesmoke;">
-            <div class="item"></div>
-        </div>
-
+    <div class="container strip" style="padding-left: 200px; padding-right: 200px;">
+        <div class="item subheader" style="text-align: center;">Copyright © Joshku Gauntlett 2025</div>
     </div>
 
 </body>
