added rye-bread page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         </div>
 
         <div class="item">
+            <a href="recipes/rye-bread.html" rel="noopener noreferrer"><button class="button">Rye Bread</button></a>
+        </div>
+
+        <div class="item">
             <a href="recipes/about-me.html" rel="noopener noreferrer"><button class="button">About Me</button></a>
         </div>
     </div>
